@@ -1,3 +1,10 @@
+TAG: alleleload-6-0-4-1
+DATE: 04/28/2016
+STAFF: lec 
+CHANGES: TR12069/postgres cleanup
+1) convert to Git 
+2) add "db.setAutoTranslate"
+
 TAG: alleleload-6-0-1-4
 DATE: 11/30/2015
 STAFF: dbm
